# hubjupylab

./: .gitignore  AGENT.md  AGENTS.md  LICENSE  README.md  TODO.md  config.py  db.py  env.template  gpu.py  hubjupylab.service  main.py  package.json  pyproject.toml  spawner.py  tsconfig.json
docs/superpowers/plans/: 2026-06-23-bun-elysia-migration.md  2026-06-23-code-server-integration.md  2026-06-23-color-palette-update.md  2026-06-23-dashboard-button-logos-fix.md  2026-06-23-dashboard-button-logos.md  2026-06-23-dashboard-layout-updates.md  2026-06-23-gpu-sync-excludes-optimizations.md  2026-06-23-user-ui-button-fix.md
docs/superpowers/specs/: 2026-06-23-code-server-integration-design.md  2026-06-23-color-palette-update-design.md  2026-06-23-dashboard-button-logos-design.md  2026-06-23-dashboard-button-logos-fix-design.md  2026-06-23-dashboard-layout-updates-design.md  2026-06-23-gpu-sync-excludes-optimizations-design.md  (+2 more)
frontend/: vite.config.ts
frontend/src/: App.tsx  index.css
scratch/: verify_admin_controls.py  verify_gpu.py  verify_htmx_admin_controls.py  verify_htmx_user_controls.py  verify_hub.py  verify_hub_ts.ts  verify_list_dirs.py  verify_reset_password.ts  verify_status_polling.py
scripts/: install.sh  migrate_db.ts
src/: config.ts  db.test.ts  db.ts  gpu.test.ts  gpu.ts  index.ts  spawner.test.ts  spawner.ts
static/: style.css
templates/: admin.html  base.html  change_password.html  dashboard.html  login.html  logs.html
templates/partials/: _admin_gpu_select.html  _admin_user_row.html  _admin_user_table_body.html  _dashboard_status.html
(+8 files in other folders)
