[project]
name = "hubjupylab"
version = "0.1.0"
description = "Lightweight JupyterLab Hub using tmux"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.2",
    "bcrypt>=4.1.2",
    "python-dotenv>=1.0.1",
]
